# opengl_3d_cube

./: CMakeLists.txt  main.cpp  vshader.vsh  widget.cpp  widget.h
